--- a/Printf/Makefile
+++ b/Printf/Makefile
@@ -1,12 +1,14 @@
-COMPIL = gcc -Wall -Wextra -Werror *.c
-CLEAR  = clear
-RUNNER = ./a.out
-CLEAN  = rm -f *.out *.o
+COMPIL	= gcc -Wall -Wextra -Werror *.c
+CLEAR	= clear
+RUNNER	= ./a.out
+CLEAN	= rm -f *.out *.o
+NORMI	= norminette *.c
 
 all:
 		${COMPIL}
 		${CLEAR}
 		${RUNNER}
 		${CLEAN}
+		${NORMI}
 
 .PHONY:		all 
