--- a/Printf/Makefile
+++ b/Printf/Makefile
@@ -9,12 +9,24 @@ CFLAGS	= -Wall -Werror -Wextra
 CLEAR	= clear
 CLEAN	= rm -f *.o
 NORM	= norminette *.c
+RUNNER1	= make re -C /Users/rvegas-j/Desktop/GitHub/Printf/pft_2019
 all:
 			${CC} ${OBJS}
 			${CCTWO}
+			${NORM}
 			${CLEAN}
 			${CLEAR}
-			${NORM}
+testp:
+			${RUNNER1}
+			cd /Users/rvegas-j/Desktop/GitHub/Printf/pft_2019 && ./test p
+
+tests:
+			${RUNNER1}
+			cd /Users/rvegas-j/Desktop/GitHub/Printf/pft_2019 && ./test s
+
+testc:
+			${RUNNER1}
+			cd /Users/rvegas-j/Desktop/GitHub/Printf/pft_2019 && ./test c
 $(NAME):
 			${CC} ${OBJS} ${CCTWO}
 fclean:		clean
@@ -22,4 +34,4 @@ fclean:		clean
 clean:
 			${RM} *.o
 re:			fclean all
-.PHONY:		all clean fclean re
+.PHONY:		all clean testp tests testc  fclean re
