--- a/Printf/Makefile
+++ b/Printf/Makefile
@@ -1,37 +1,17 @@
-SRC_DIR = SRC_DIR
-INCLUDES=./
-NAME	= libftprintf.a
-OBJS	= *.c
-CC		= gcc -c -Wall -Wextra -Werror
-CCTWO	= ar rc libftprintf.a *.o
-RM		= rm -f
-CFLAGS	= -Wall -Werror -Wextra
-CLEAR	= clear
+COMPI	= gcc -c -Wall -Wextra -Werror *.c
+ARCHI	= ar rc libftprintf.a *.o
 CLEAN	= rm -f *.o
-NORM	= norminette *.c
-RUNNER1	= make re -C /Users/rvegas-j/Desktop/GitHub/Printf/pft_2019
+CLEAR	= clear
+NORMI	= norminette *.c
 all:
-			${CC} ${OBJS}
-			${CCTWO}
-			${NORM}
+			${COMPI}
+			${ARCHI}
 			${CLEAN}
 			${CLEAR}
-testp:
-			${RUNNER1}
-			cd /Users/rvegas-j/Desktop/GitHub/Printf/pft_2019 && ./test p
-
-tests:
-			${RUNNER1}
-			cd /Users/rvegas-j/Desktop/GitHub/Printf/pft_2019 && ./test s
-
-testc:
-			${RUNNER1}
-			cd /Users/rvegas-j/Desktop/GitHub/Printf/pft_2019 && ./test c
-$(NAME):
-			${CC} ${OBJS} ${CCTWO}
+			${NORMI}
 fclean:		clean
 			${RM} ${NAME}
 clean:
 			${RM} *.o
 re:			fclean all
-.PHONY:		all clean testp tests testc  fclean re
+.PHONY:		all fclean clean re
